fixed uneven header and body

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,7 +15,7 @@ ul {
 }
 
 h1 {
-    margin: 20px;
+    /* margin: 20px; */
     text-align: center;
     background-color: rgb(180, 69, 69);
     outline: 4px solid gray;
@@ -23,10 +23,11 @@ h1 {
 }
 section{
     background-color: white;
+    outline: 4px solid gray;
 }
 
 #newRel{
-    margin-top: 20px;
+    /* margin-top: 20px; */
     background-color: rgb(180, 69, 69) ;
 }
 
